# LearnOpenGL-Renderer

./: .gitignore  .rgignore  LICENSE  build.ps1  build_debug.ps1  meson.build
models/chair/: chair.mtl
models/cube/: cube.h
models/plane/: plane.h
models/quad/: quad.h
p-src/: chapter_04.cpp  chapter_05.cpp  chapter_05_1.cpp  chapter_06.cpp  chapter_06_1.cpp  chapter_07.cpp  chapter_08.cpp  chapter_09.cpp  chapter_09_1.cpp  chapter_10.cpp  chapter_12.cpp  chapter_13.cpp  chapter_13_gouraud.cpp  chapter_13_view.cpp  chapter_14.cpp  chapter_15.cpp  chapter_16_directional_light.cpp  chapter_16_point_light.cpp  chapter_16_spot_light.cpp  chapter_17.cpp  chapter_21.cpp  chapter_21_chair.cpp  chapter_22.cpp  chapter_26.cpp  chapter_26_pp.cpp  chapter_27.cpp  chapter_27_environment_reflect_refract.cpp  chapter_30_geometry.cpp  chapter_35_shadow_mapping.cpp  meson.build  particle_scene.cpp  particle_scene_fog.cpp  particle_scene_rain.cpp
r-include/: camera.h  gl_debug.h  light.h  model.h  particle_system.h  post_process.h  render_target.h  screen_quad.h  shader.h  texture.h  utils.h
r-src/: camera.cpp  gl_debug.cpp  light.cpp  meson.build  model.cpp  particle_system.cpp  post_process.cpp  render_target.cpp  screen_quad.cpp  shader.cpp  texture.cpp  utils.cpp
shaders/: chapter_05_white.frag  chapter_06.frag  chapter_06.vert  chapter_06_1.frag  chapter_06_1.vert  chapter_07.vert  chapter_08.vert  chapter_09.frag  chapter_09.vert  chapter_10.frag  chapter_10.vert  chapter_12_lighting_shader.frag  chapter_12_lighting_shader.vert  chapter_13_lighting_shader.frag  chapter_13_lighting_shader_gouraud.frag  chapter_13_lighting_shader_gouraud.vert  chapter_13_lighting_shader_view.frag  chapter_13_lighting_shader_view.vert  chapter_14_light_cube_shader.frag  chapter_14_lighting_shader.frag  chapter_14_lighting_shader.vert  chapter_15_lighting_shader.frag  chapter_16_lighting_shader_directional.frag  chapter_16_lighting_shader_point_light.frag  chapter_16_lighting_shader_point_light.vert  chapter_16_lighting_shader_spot_light.frag  chapter_17.frag  chapter_21.frag  chapter_22.frag  chapter_22.vert  chapter_26.frag  chapter_26_post_process.frag  chapter_26_post_process.vert  chapter_26_post_process_kernel.frag  chapter_26_texture.frag  chapter_27_reflect.frag  chapter_27_reflect.vert  chapter_27_refract.frag  chapter_27_skybox.frag  chapter_27_skybox.vert  (+7 more)
subprojects/: assimp.wrap  glfw.wrap
subprojects/glad/: meson.build
(+2 files in other folders)
