p_sources = files(
  'chapter_04.cpp',
  'chapter_05.cpp',
  'chapter_05_1.cpp',
  'chapter_06.cpp',
  'chapter_06_1.cpp',
  'chapter_07.cpp',
  'chapter_08.cpp',
  'chapter_09.cpp',
  'chapter_09_1.cpp',
  'chapter_10.cpp',
  'chapter_12.cpp',
  'chapter_13.cpp',
  'chapter_13_gouraud.cpp',
  'chapter_13_view.cpp',
  'chapter_14.cpp',
  'chapter_15.cpp',
  'chapter_16_directional_light.cpp',
  'chapter_16_point_light.cpp',
  'chapter_16_spot_light.cpp',
  'chapter_17.cpp',
  'chapter_21.cpp',
  'chapter_21_chair.cpp',
  'chapter_21_dino.cpp',
  'chapter_22.cpp',
  'chapter_26.cpp',
  'chapter_26_pp.cpp',
  'chapter_27.cpp',
  'chapter_27_environment_reflect_refract.cpp',
  'chapter_30_geometry.cpp',
  'chapter_35_shadow_mapping.cpp',
  'particle_scene.cpp',
  'particle_scene_fog.cpp',
  'particle_scene_rain.cpp',
)
